Actualizacion de eventos

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -84,7 +84,7 @@
         <p>
           {{'WINK.HOME.NO_NEARBY' | translate}}
         </p>
-        <fa-icon [icon]="['fas', 'home']" class="icono"></fa-icon>
+        <fa-icon [icon]="['fas', 'user-slash']" class="icono"></fa-icon>
       </div>
 
     </ion-list>
