--- a/src/app/pages/winks/winks.page.html
+++ b/src/app/pages/winks/winks.page.html
@@ -51,13 +51,13 @@
       <p >
         {{noHistorical | translate}}
       </p>
-      <fa-icon [icon]="['fas', 'home']" class="icono"></fa-icon>
+      <fa-icon [icon]="['far', 'eye-slash']" class="icono"></fa-icon>
     </div>
     <div *ngIf="requests.length === 0 && tab === 'requests'" class="vacio">
       <p >
         {{noRequests | translate}}
       </p>
-      <fa-icon [icon]="['fas', 'home']" class="icono"></fa-icon>
+      <fa-icon [icon]="['far', 'eye-slash']" class="icono"></fa-icon>
     </div>
   </ion-content>
 </div>
