--- a/src/app/common/alert/alert.component.scss
+++ b/src/app/common/alert/alert.component.scss
@@ -32,7 +32,7 @@
   font-size: 1.5rem;
 }
 .alert__message {
-  color: var(--color-placeholder);
+  // color: var(--color-placeholder);
   font-family: var(--ion-font-family,inherit);
 }
 .alert__buttons {
