--- a/src/app/pages/winks/item-wink/x.html
+++ b/src/app/pages/winks/item-wink/x.html
@@ -1,11 +1,11 @@
-<ion-item *ngIf="wink && !wink.approved && wink.user" class="ion-activatable ion-activatable-up">
+<ion-item *ngIf="wink && !wink.approved && userWink" class="ion-activatable ion-activatable-up">
   <ion-avatar  class="avatar-wink ion-activatable ion-activatable-up" (click)="GoPrivateProfile()">
     <img [srcPath]="Avatar()" class="img-avatar" (ionError)="ErrorImagen()" >
   </ion-avatar>
   <ion-label class="label-item">
     <div>
       <ion-title class="title-wink" (click)="GoPrivateProfile()" [ngClass]="{'title-newWink': wink.watched}">
-        {{wink && wink.user ? wink.user.firstName + ' ' + wink.user.lastName : 'John Doe'}}
+        {{wink && userWink ? userWink.firstName + ' ' + userWink.lastName : 'John Doe'}}
         <ion-badge *ngIf="wink.watched" class="item-win-badge">*</ion-badge>
       </ion-title>
       <div *ngIf="wink" class="date-wink">
@@ -24,7 +24,7 @@
   </ion-label>
 </ion-item>
 
-<ion-item-sliding *ngIf="wink && wink.approved && wink.user">
+<ion-item-sliding *ngIf="wink && wink.approved && userWink">
   
   <ion-item-options side="start">
     <ion-item-option color="danger" expandable="true" (click)="Ignore()">
@@ -40,7 +40,7 @@
     <ion-label class="label-item">
       <div>
         <ion-title class="title-wink" (click)="GoPrivateProfile()" >
-          {{wink && wink.user ? wink.user.firstName + ' ' + wink.user.lastName : 'John Doe'}}
+          {{wink && userWink ? userWink.firstName + ' ' + userWink.lastName : 'John Doe'}}
         </ion-title>
         <div *ngIf="wink" class="date-wink">
           <ion-icon name="time" color="medium"></ion-icon>
