--- a/src/app/pages/basic-data/basic-data.page.html
+++ b/src/app/pages/basic-data/basic-data.page.html
@@ -110,7 +110,7 @@
       [formGroup]="form"
       (ngSubmit)="onSubmit()">
       <div class="contenedorAvatar" >
-        <ion-avatar (click)="SeleccionarImagen()" class="avatar-profile">
+        <ion-avatar (click)="SelectImage()" class="avatar-profile">
           <img
             class="img-avatar"
             *ngIf="!loadingAvatar"
