--- a/src/app/pages/profile-settings/profile-settings.page.scss
+++ b/src/app/pages/profile-settings/profile-settings.page.scss
@@ -22,8 +22,8 @@ button {
   width: 0% !important;
 }
 
-.ordenar {
-  border: 0.5px solid rgb(192, 189, 189);
+.order {
+  border: 0.9px solid rgb(192, 189, 189);
   border-radius: 3px;
 }
 
@@ -32,7 +32,7 @@ button {
 }
 
 .skeleton-section {
-  width: 100%; 
+  width: 100%;
   height: 45px;
 }
 .skeleton-bio-label {
@@ -40,7 +40,7 @@ button {
 }
 
 .skeleton-bio-content {
-  width: 80%; 
+  width: 80%;
   height: 50px;
 }
 
