--- a/src/app/pages/basic-data/basic-data.page.html
+++ b/src/app/pages/basic-data/basic-data.page.html
@@ -155,7 +155,7 @@
         <ion-text color="danger">
           {{ MessageError('lastName') | translate }}
         </ion-text>
-        <ion-item>
+        <!-- <ion-item>
             <fa-icon
               [icon]="['fas', 'user']"
               class="icono icon-center"
@@ -170,7 +170,7 @@
             minlength="4"
           >
           </ion-input>
-        </ion-item>
+        </ion-item> -->
         <ion-text color="danger">
           {{ MessageError('username') | translate }}
         </ion-text>
