update basic data

--- a/src/app/pages/basic-data/basic-data.page.html
+++ b/src/app/pages/basic-data/basic-data.page.html
@@ -171,9 +171,9 @@
           >
           </ion-input>
         </ion-item> -->
-        <ion-text color="danger">
+        <!-- <ion-text color="danger">
           {{ MessageError('username') | translate }}
-        </ion-text>
+        </ion-text> -->
         <ion-item>
             <fa-icon
               [icon]="['fas', 'envelope']"
