--- a/src/global.scss
+++ b/src/global.scss
@@ -27,6 +27,7 @@
 
 @import "../vlibs/virtwoo-auth/auth.scss";
 @import 'ngx-tour-ngx-popper/styles.css';
+@import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
 
 .icono {
   margin-inline-end: 0px !important; 
