--- a/src/app/common/alert/alert.component.html
+++ b/src/app/common/alert/alert.component.html
@@ -12,40 +12,40 @@
   *ngIf="isPromptStatus"
   >
       <ion-radio-group >
-    
+
         <ion-item>
           <ion-label>
             {{'WINK.STATUS.AVAILABLE' | translate}}
           </ion-label>
-          <ion-radio 
-            slot="start" 
-            value="WINK.STATUS.AVAILABLE" 
+          <ion-radio
+            slot="start"
+            value="WINK.STATUS.AVAILABLE"
             (ionFocus)="Blur($event)"
             [checked]="description && description === 'WINK.STATUS.AVAILABLE'">
           </ion-radio>
         </ion-item>
-        
+
         <ion-item>
           <ion-label>
             {{'WINK.STATUS.BUSY' | translate}}
           </ion-label>
-          <ion-radio 
-            slot="start" 
-            value="WINK.STATUS.BUSY" 
+          <ion-radio
+            slot="start"
+            value="WINK.STATUS.BUSY"
             (ionFocus)="Blur($event)"
             [checked]="description && description === 'WINK.STATUS.BUSY'">
           </ion-radio>
         </ion-item>
-    
-        <ion-item #item > 
-          <ion-input #custom 
-            (ionFocus)="Focus($event)" 
-            [placeholder]="'WINK.HOME.STATUS' | translate" 
+
+        <ion-item #item >
+          <ion-input #custom
+            (ionFocus)="Focus($event)"
+            [placeholder]="'WINK.HOME.STATUS' | translate"
             [maxlength]="maxStatus"
             [value]="description && isInput ? description : null">
           </ion-input>
-          <ion-radio 
-            slot="start" 
+          <ion-radio
+            slot="start"
             value="input"
             [checked]="!description || focusInput">
           </ion-radio>
@@ -56,12 +56,22 @@
   <div class="alert__message"
     *ngIf="description && !isPromptStatus"
   >
-    {{ description | translate }}
+    {{ (description | translate) + (isRange ? valueRange + 'Km' : '') }}
   </div>
-  <div class="alert__message alert__list__inputs" 
+  <div class="alert__message"
+  *ngIf="isRange"
+  >
+  <ion-item>
+    <ion-range #rangeC [(ngModel)]="valueRange" [min]="min" [max]="max" pin color="secondary" [value]="value ? value : 50" >
+      <ion-icon slot="start" name="remove-circle-outline"></ion-icon>
+      <ion-icon slot="end" name="add-circle-outline"></ion-icon>
+    </ion-range>
+  </ion-item>
+  </div>
+  <div class="alert__message alert__list__inputs"
     *ngIf="isInputs && inputs.length > 0"
   >
-  <ion-content [scrollEvents]="true" 
+  <ion-content [scrollEvents]="true"
   [ngClass]="{'one__input': inputs.length === 1, 'two__input': inputs.length === 2, 'three__input': inputs.length >= 3}">
     <ion-list >
       <ion-item *ngFor="let input of inputs">
