--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,17 +4,29 @@
       <ion-title>
         {{'WINK.HOME.TITLE' | translate}}
       </ion-title>
+      <ion-buttons slot="end">
+        <div class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mie">
+          <fa-icon
+            [icon]="['fas',  'globe-americas']"
+            class="icon-bar"
+            (click)="AlertRange()"
+          ></fa-icon>
+          <ion-ripple-effect></ion-ripple-effect>
+          <div *ngIf="tour" tourAnchor="status"></div>
+        </div>
+        <div class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mie">
+          <fa-icon
+            [icon]="['far',  'comment']"
+            class="icon-bar"
+            (click)="PromptStatus()"
+            [ngClass]="{'icon-green' : (user.status === 'WINK.STATUS.AVAILABLE'), 'icon-red' : (user.status === 'WINK.STATUS.BUSY'), 'icon-blue' : (user.status !== 'WINK.STATUS.AVAILABLE' && user.status !== 'WINK.STATUS.BUSY')}"
+          ></fa-icon>
+          <ion-ripple-effect></ion-ripple-effect>
+          <div *ngIf="tour" tourAnchor="status"></div>
+        </div>
+      </ion-buttons>
 
-      <div class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mie" slot="end" >
-        <fa-icon 
-          [icon]="['far',  'comment']"
-          class="icon-bar"
-          (click)="PromptStatus()"
-          [ngClass]="{'icon-green' : (user.status === 'WINK.STATUS.AVAILABLE'), 'icon-red' : (user.status === 'WINK.STATUS.BUSY'), 'icon-blue' : (user.status !== 'WINK.STATUS.AVAILABLE' && user.status !== 'WINK.STATUS.BUSY')}"
-        ></fa-icon>        
-        <ion-ripple-effect></ion-ripple-effect>
-        <div *ngIf="tour" tourAnchor="status"></div>
-      </div>
+
     </ion-toolbar>
   </ion-header>
 
@@ -28,37 +40,37 @@
         [refreshingText]="'WINK.HOME.REFRESHING' | translate">
       </ion-refresher-content>
     </ion-refresher>
-      
+
     <ion-list>
       <ion-grid *ngIf="nearbyUsers.length > 0  && !load" class="grid-home">
-        <ion-row > 
-          <ion-col 
-          sizeXs="6" 
-          sizeSm="4" 
-          sizeMd="3" 
-          sizeLg="2.4" 
+        <ion-row >
+          <ion-col
+          sizeXs="6"
+          sizeSm="4"
+          sizeMd="3"
+          sizeLg="2.4"
           sizeXl="2"
           class="col-home"
           *ngFor="let user of nearbyUsers">
-            <card 
+            <card
             (click)="GoPublicProfile(user)"
             [user]="user"
             [tour]="tour">
           </card>
-          
+
           </ion-col>
-          
+
         </ion-row>
-        
+
       </ion-grid>
 
       <ion-grid *ngIf="load && !tour" class="grid-home">
-        <ion-row > 
-          <ion-col 
-          sizeXs="6" 
-          sizeSm="4" 
-          sizeMd="3" 
-          sizeLg="2.4" 
+        <ion-row >
+          <ion-col
+          sizeXs="6"
+          sizeSm="4"
+          sizeMd="3"
+          sizeLg="2.4"
           sizeXl="2"
           class="col-home"
           *ngFor="let item of arrayLoad">
@@ -77,18 +89,18 @@
       </div>
 
     </ion-list>
-    
+
     <ion-infinite-scroll threshold="100px"  (ionInfinite)="LoadUsers($event)">
       <ion-infinite-scroll-content
         loadingSpinner="bubbles"
         [loadingText]="'WINK.HOME.LOADING_NEARBY' | translate"
         >
-      </ion-infinite-scroll-content>    
+      </ion-infinite-scroll-content>
     </ion-infinite-scroll>
 
-    <ion-fab 
-      vertical="bottom" 
-      horizontal="end" 
+    <ion-fab
+      vertical="bottom"
+      horizontal="end"
       slot="fixed"  >
 
       <div *ngIf="tour" tourAnchor="profiles"></div>
@@ -96,28 +108,28 @@
       <ion-fab-button size="small">
         <ion-icon name="eye"></ion-icon>
       </ion-fab-button>
-      
-      <ion-fab-list side="top" [activated]="OpenFabList">  
-        <ion-fab-button 
-          (click)="ChangeProfiles('2')" 
+
+      <ion-fab-list side="top" [activated]="OpenFabList">
+        <ion-fab-button
+          (click)="ChangeProfiles('2')"
           [ngClass]="{'activo': isProfessional, 'inactivo' : !isProfessional}">
-            <fa-icon 
-            [icon]="['fas', 'user-tie']" 
-            class="icono-public" 
+            <fa-icon
+            [icon]="['fas', 'user-tie']"
+            class="icono-public"
             ></fa-icon>
         </ion-fab-button>
 
         <ion-fab-button
-          (click)="ChangeProfiles('1')" 
+          (click)="ChangeProfiles('1')"
           [ngClass]="{'activo': isPersonal, 'inactivo' : !isPersonal}">
-          <fa-icon 
-            [icon]="['fas', 'user']" 
-            class="icono-public" 
+          <fa-icon
+            [icon]="['fas', 'user']"
+            class="icono-public"
           ></fa-icon>
         </ion-fab-button>
       </ion-fab-list>
 
-    </ion-fab>  
+    </ion-fab>
 
   </ion-content>
 </div>
