--- a/src/app/pages/winks/item-wink/item-wink.component.html
+++ b/src/app/pages/winks/item-wink/item-wink.component.html
@@ -13,7 +13,7 @@
         <ion-note class="note-wink"  color="medium">{{ Time(wink.createdAt)  }}</ion-note>
       </div>  
     </div>
-    <div  class="date-wink">
+    <div *ngIf="!(load | async)"  class="date-wink content-center" >
       <ion-button class="button-50 input-relative" (click)="Accept()">
         {{'WINK.BUTTONS.WINK' | translate}}
       </ion-button>
@@ -21,12 +21,15 @@
         {{'WINK.BUTTONS.IGNORE' | translate}}
       </ion-button>
     </div>
+    <div *ngIf="(load | async)" class="date-wink content-center">
+      <ion-spinner name="bubbles"></ion-spinner>
+    </div>
   </ion-label>
 </ion-item>
 
 <ion-item-sliding *ngIf="wink && wink.approved && wink.user">
   
-  <ion-item-options side="start">
+  <ion-item-options *ngIf="!(load | async)" side="start">
     <ion-item-option color="danger" expandable="true" (click)="Ignore()">
       {{'WINK.BUTTONS.DELETE' | translate}}
     </ion-item-option>
@@ -50,7 +53,7 @@
     </ion-label>
   </ion-item>
   
-  <ion-item-options side="end">
+  <ion-item-options *ngIf="!(load | async)" side="end">
     <ion-item-option color="danger" expandable="true" (click)="Ignore()">
       {{'WINK.BUTTONS.DELETE' | translate}}
     </ion-item-option>
