correcion de boton guardar promtStatus

--- a/src/app/common/alert/alert.component.html
+++ b/src/app/common/alert/alert.component.html
@@ -101,6 +101,7 @@
       *ngFor="let button of buttons"
       [color]="button.type"
       (click)="close(button)"
+      [disabled]="disabledButton(button)"
     >
       {{ button.label | translate }}
     </ion-button>
