Correciones de nombre en perfil publico

--- a/src/app/pages/basic-data/basic-data.page.html
+++ b/src/app/pages/basic-data/basic-data.page.html
@@ -182,6 +182,7 @@
           <ion-input
             formControlName="email"
             type="email"
+            [disabled]="DisabledEmail()"
           >
           </ion-input>
         </ion-item>
@@ -202,6 +203,7 @@
               <ion-input
                 type="number"
                 formControlName="phoneCode"
+                [disabled]="DisabledPhone()"
               >
               </ion-input>
             </ion-item>
@@ -217,6 +219,7 @@
               <ion-input
                 type="number"
                 formControlName="phoneNumber"
+                [disabled]="DisabledPhone()"
               >
               </ion-input>
             </ion-item>
