--- a/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
+++ b/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
@@ -108,6 +108,7 @@
     [placeholder]="MarcaAgua(0)  | translate"
     (focus)="Focus(true)"
     (blur)="Focus(false)"
+    maxlength="12"
     autocomplete="off"
     [matChipInputFor]="chipList"
     [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
