--- a/vlibs/virtwoo-auth/pages/virtwoo-register/virtwoo-register.component.html
+++ b/vlibs/virtwoo-auth/pages/virtwoo-register/virtwoo-register.component.html
@@ -18,7 +18,7 @@
         <virtwoo-auth-form
           [fields]="['email', 'password']"
           [submitText]="'VIRTWOO_AUTH.FORM.BUTTON.REGISTER' | translate"
-          [submitIconUrl]="'/assets/icon/handshake.svg'"
+          [submitIconUrl]="'/assets/icon/email.png'"
           [disabled]="loading"
           (submitted)="submit($event)"
         >
